fixed hamburger menu, still have to adjust spacing

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -5,4 +5,13 @@
     #hamburger-nav {
         display: flex;
     }
+
+      #desktop-nav .logo {
+    display: none;
+    }
+
+    #hamburger-nav .logo {
+      display: block;
+  }
+
 }
